bindings/c/whiteout_m2.h

typedef struct whiteout_M2RibbonEmitter whiteout_M2RibbonEmitter;
typedef struct whiteout_M2Box whiteout_M2Box;
typedef struct whiteout_M2ParticleEmitter whiteout_M2ParticleEmitter;
uint16_t whiteout_m2_M2RibbonEmitter_get_textureRows(const whiteout_M2RibbonEmitter* self);
void whiteout_m2_M2RibbonEmitter_set_textureRows(whiteout_M2RibbonEmitter* self, uint16_t value);
uint16_t whiteout_m2_M2RibbonEmitter_get_textureCols(const whiteout_M2RibbonEmitter* self);
void whiteout_m2_M2RibbonEmitter_set_textureCols(whiteout_M2RibbonEmitter* self, uint16_t value);
int16_t whiteout_m2_M2RibbonEmitter_get_priorityPlane(const whiteout_M2RibbonEmitter* self);
void whiteout_m2_M2RibbonEmitter_set_priorityPlane(whiteout_M2RibbonEmitter* self, int16_t value);
int8_t whiteout_m2_M2RibbonEmitter_get_ribbonColorIndex(const whiteout_M2RibbonEmitter* self);
void whiteout_m2_M2RibbonEmitter_set_ribbonColorIndex(whiteout_M2RibbonEmitter* self, int8_t value);
int8_t whiteout_m2_M2RibbonEmitter_get_textureTransformIndex(const whiteout_M2RibbonEmitter* self);
void whiteout_m2_M2RibbonEmitter_set_textureTransformIndex(whiteout_M2RibbonEmitter* self, int8_t value);
/* ── M2Box ─────────────────────────────────────────────── */

whiteout_M2Box* whiteout_m2_M2Box_new(void);
void whiteout_m2_M2Box_delete(whiteout_M2Box* self);
whiteout_Vector3f* whiteout_m2_M2Box_get_minimum(whiteout_M2Box* self);
void whiteout_m2_M2Box_set_minimum(whiteout_M2Box* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2Box_get_maximum(whiteout_M2Box* self);
void whiteout_m2_M2Box_set_maximum(whiteout_M2Box* self, const whiteout_Vector3f* value);
/* ── M2ParticleEmitter ─────────────────────────────────────────────── */

whiteout_M2ParticleEmitter* whiteout_m2_M2ParticleEmitter_new(void);
void whiteout_m2_M2ParticleEmitter_delete(whiteout_M2ParticleEmitter* self);
uint32_t whiteout_m2_M2ParticleEmitter_get_particleId(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_particleId(whiteout_M2ParticleEmitter* self, uint32_t value);
int32_t whiteout_m2_M2ParticleEmitter_get_flags(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_flags(whiteout_M2ParticleEmitter* self, int32_t value);
whiteout_Vector3f* whiteout_m2_M2ParticleEmitter_get_position(whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_position(whiteout_M2ParticleEmitter* self, const whiteout_Vector3f* value);
uint16_t whiteout_m2_M2ParticleEmitter_get_boneId(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_boneId(whiteout_M2ParticleEmitter* self, uint16_t value);
whiteout_CString whiteout_m2_M2ParticleEmitter_get_particleModelFilename(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_particleModelFilename(whiteout_M2ParticleEmitter* self, const char* value);
whiteout_CString whiteout_m2_M2ParticleEmitter_get_childEmittersModelFilename(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_childEmittersModelFilename(whiteout_M2ParticleEmitter* self, const char* value);
int32_t whiteout_m2_M2ParticleEmitter_get_blendingType(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_blendingType(whiteout_M2ParticleEmitter* self, int32_t value);
int32_t whiteout_m2_M2ParticleEmitter_get_emitterType(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_emitterType(whiteout_M2ParticleEmitter* self, int32_t value);
uint16_t whiteout_m2_M2ParticleEmitter_get_particleColorIndex(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_particleColorIndex(whiteout_M2ParticleEmitter* self, uint16_t value);
uint8_t whiteout_m2_M2ParticleEmitter_get_particleType(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_particleType(whiteout_M2ParticleEmitter* self, uint8_t value);
uint8_t whiteout_m2_M2ParticleEmitter_get_headOrTail(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_headOrTail(whiteout_M2ParticleEmitter* self, uint8_t value);
int16_t whiteout_m2_M2ParticleEmitter_get_textureTilerotation(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_textureTilerotation(whiteout_M2ParticleEmitter* self, int16_t value);
uint16_t whiteout_m2_M2ParticleEmitter_get_rows(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_rows(whiteout_M2ParticleEmitter* self, uint16_t value);
uint16_t whiteout_m2_M2ParticleEmitter_get_columns(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_columns(whiteout_M2ParticleEmitter* self, uint16_t value);
float whiteout_m2_M2ParticleEmitter_get_lifespanVariation(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_lifespanVariation(whiteout_M2ParticleEmitter* self, float value);
float whiteout_m2_M2ParticleEmitter_get_emissionRateVariation(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_emissionRateVariation(whiteout_M2ParticleEmitter* self, float value);
whiteout_Vector2f* whiteout_m2_M2ParticleEmitter_get_scaleVary(whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_scaleVary(whiteout_M2ParticleEmitter* self, const whiteout_Vector2f* value);
float whiteout_m2_M2ParticleEmitter_get_tailLength(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_tailLength(whiteout_M2ParticleEmitter* self, float value);
float whiteout_m2_M2ParticleEmitter_get_twinkleSpeed(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_twinkleSpeed(whiteout_M2ParticleEmitter* self, float value);
float whiteout_m2_M2ParticleEmitter_get_twinklePercent(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_twinklePercent(whiteout_M2ParticleEmitter* self, float value);
whiteout_Vector2f* whiteout_m2_M2ParticleEmitter_get_twinkleScale(whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_twinkleScale(whiteout_M2ParticleEmitter* self, const whiteout_Vector2f* value);
float whiteout_m2_M2ParticleEmitter_get_inheritVelocityScale(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_inheritVelocityScale(whiteout_M2ParticleEmitter* self, float value);
float whiteout_m2_M2ParticleEmitter_get_drag(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_drag(whiteout_M2ParticleEmitter* self, float value);
float whiteout_m2_M2ParticleEmitter_get_baseSpin(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_baseSpin(whiteout_M2ParticleEmitter* self, float value);
float whiteout_m2_M2ParticleEmitter_get_baseSpinVariation(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_baseSpinVariation(whiteout_M2ParticleEmitter* self, float value);
float whiteout_m2_M2ParticleEmitter_get_spinSpeed(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_spinSpeed(whiteout_M2ParticleEmitter* self, float value);
float whiteout_m2_M2ParticleEmitter_get_spinSpeedVariation(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_spinSpeedVariation(whiteout_M2ParticleEmitter* self, float value);
whiteout_Vector3f* whiteout_m2_M2ParticleEmitter_get_windVector(whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_windVector(whiteout_M2ParticleEmitter* self, const whiteout_Vector3f* value);
float whiteout_m2_M2ParticleEmitter_get_windTime(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_windTime(whiteout_M2ParticleEmitter* self, float value);
float whiteout_m2_M2ParticleEmitter_get_followSpeed1(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_followSpeed1(whiteout_M2ParticleEmitter* self, float value);
float whiteout_m2_M2ParticleEmitter_get_followScale1(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_followScale1(whiteout_M2ParticleEmitter* self, float value);
float whiteout_m2_M2ParticleEmitter_get_followSpeed2(const whiteout_M2ParticleEmitter* self);
void whiteout_m2_M2ParticleEmitter_set_followSpeed2(whiteout_M2ParticleEmitter* self, float value);
float whiteout_m2_M2ParticleEmitter_get_followScale2(const whiteout_M2ParticleEmitter* self);