bindings/csharp/Whiteout/M2/NativeMethods.M2.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2RibbonEmitter_get_textureRows(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2RibbonEmitter_set_textureRows(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2RibbonEmitter_get_textureCols(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2RibbonEmitter_set_textureCols(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial short whiteout_m2_M2RibbonEmitter_get_priorityPlane(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2RibbonEmitter_set_priorityPlane(IntPtr self, short value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial sbyte whiteout_m2_M2RibbonEmitter_get_ribbonColorIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2RibbonEmitter_set_ribbonColorIndex(IntPtr self, sbyte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial sbyte whiteout_m2_M2RibbonEmitter_get_textureTransformIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2RibbonEmitter_set_textureTransformIndex(IntPtr self, sbyte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Box_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Box_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Box_get_minimum(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Box_set_minimum(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Box_get_maximum(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Box_set_maximum(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2ParticleEmitter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2ParticleEmitter_get_particleId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_particleId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m2_M2ParticleEmitter_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_flags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2ParticleEmitter_get_position(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_position(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2ParticleEmitter_get_boneId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_boneId(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m2_M2ParticleEmitter_get_particleModelFilename(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_particleModelFilename(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m2_M2ParticleEmitter_get_childEmittersModelFilename(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_childEmittersModelFilename(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m2_M2ParticleEmitter_get_blendingType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_blendingType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m2_M2ParticleEmitter_get_emitterType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_emitterType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2ParticleEmitter_get_particleColorIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_particleColorIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m2_M2ParticleEmitter_get_particleType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_particleType(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m2_M2ParticleEmitter_get_headOrTail(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_headOrTail(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial short whiteout_m2_M2ParticleEmitter_get_textureTilerotation(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_textureTilerotation(IntPtr self, short value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2ParticleEmitter_get_rows(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_rows(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2ParticleEmitter_get_columns(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_columns(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_lifespanVariation(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_lifespanVariation(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_emissionRateVariation(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_emissionRateVariation(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2ParticleEmitter_get_scaleVary(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_scaleVary(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_tailLength(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_tailLength(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_twinkleSpeed(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_twinkleSpeed(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_twinklePercent(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_twinklePercent(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2ParticleEmitter_get_twinkleScale(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_twinkleScale(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_inheritVelocityScale(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_inheritVelocityScale(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_drag(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_drag(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_baseSpin(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_baseSpin(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_baseSpinVariation(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_baseSpinVariation(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_spinSpeed(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_spinSpeed(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_spinSpeedVariation(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_spinSpeedVariation(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2ParticleEmitter_get_windVector(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_windVector(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_windTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_windTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_followSpeed1(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_followSpeed1(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_followScale1(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_followScale1(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_followSpeed2(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ParticleEmitter_set_followSpeed2(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2ParticleEmitter_get_followScale2(IntPtr self);
